Add galaxy image to Leo
