# src/main/scala/org/broadinstitute/dsde/workbench/leonardo/model/LeonardoModel.scala
@@ -35,6 +35,7 @@ case class ClusterRequest(labels: Option[LabelMap] = Option(Map.empty),
                           defaultClientId: Option[String] = None,
                           jupyterDockerImage: Option[String] = None,
                           rstudioDockerImage: Option[String] = None,
+                          galaxyDockerImage: Option[String] = None,
                           scopes: Option[Set[String]] = None)
 
 
@@ -69,6 +70,7 @@ object ClusterTool extends Enum[ClusterTool] {
   val values = findValues
   case object Jupyter extends ClusterTool
   case object RStudio extends ClusterTool
+  case object Galaxy extends ClusterTool
 }
 case class ClusterImage(tool: ClusterTool,
                         dockerImage: String,
@@ -211,16 +213,19 @@ case class ClusterInitValues(googleProject: String,
                              clusterName: String,
                              jupyterDockerImage: String,
                              rstudioDockerImage: String,
+                             galaxyDockerImage: String,
                              proxyDockerImage: String,
                              jupyterServerCrt: String,
                              jupyterServerKey: String,
                              rootCaPem: String,
                              jupyterDockerCompose: String,
                              rstudioDockerCompose: String,
+                             galaxyDockerCompose: String,
                              proxyDockerCompose: String,
                              proxySiteConf: String,
                              jupyterServerName: String,
                              rstudioServerName: String,
+                             galaxyServerName: String,
                              proxyServerName: String,
                              jupyterExtensionUri: String,
                              jupyterUserScriptUri: String,
@@ -249,16 +254,19 @@ object ClusterInitValues {
       clusterName.value,
       clusterImages.find(_.tool == Jupyter).map(_.dockerImage).getOrElse(""),
       clusterImages.find(_.tool == RStudio).map(_.dockerImage).getOrElse(""),
+      clusterImages.find(_.tool == Galaxy).map(_.dockerImage).getOrElse(""),
       proxyConfig.jupyterProxyDockerImage,
       GcsPath(initBucketName, GcsObjectName(clusterFilesConfig.jupyterServerCrt.getName)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterFilesConfig.jupyterServerKey.getName)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterFilesConfig.jupyterRootCaPem.getName)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterResourcesConfig.jupyterDockerCompose.value)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterResourcesConfig.rstudioDockerCompose.value)).toUri,
+      GcsPath(initBucketName, GcsObjectName(clusterResourcesConfig.galaxyDockerCompose.value)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterResourcesConfig.proxyDockerCompose.value)).toUri,
       GcsPath(initBucketName, GcsObjectName(clusterResourcesConfig.proxySiteConf.value)).toUri,
       dataprocConfig.jupyterServerName,
       dataprocConfig.rstudioServerName,
+      dataprocConfig.galaxyServerName,
       proxyConfig.proxyServerName,
       clusterRequest.jupyterExtensionUri.map(_.toUri).getOrElse(""),
       clusterRequest.jupyterUserScriptUri.map(_.toUri).getOrElse(""),
@@ -306,7 +314,7 @@ object LeonardoJsonSupport extends SprayJsonSupport with DefaultJsonProtocol {
 
   implicit val UserClusterExtensionConfigFormat = jsonFormat3(UserJupyterExtensionConfig.apply)
 
-  implicit val ClusterRequestFormat = jsonFormat12(ClusterRequest)
+  implicit val ClusterRequestFormat = jsonFormat13(ClusterRequest)
 
   implicit val ClusterResourceFormat = ValueObjectFormat(ClusterResource)
 
